<resources>
    <string name="app_name" translatable="false">ActivityRecognition</string>
    <string name="app_version_name_description">Versión alfa 0.1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Server related strings -->
    <string name="server_address">http://127.0.0.1:8000</string>
    <string name="server_file_destination">/android/receiveFile/</string>

    <!-- Log file strings -->
    <string name="log_filename">ActivityLog</string>
    <string name="log_base_text">User indicated current activity: %1$s</string>
    <string name="log_error">Error: No available data</string>
    <string name="log_user_tag">USER</string>
    <string name="log_activity_tag">ACT</string>
    <string name="log_location_tag">LOC</string>
    <string name="log_notification_tag">NOT</string>

    <!-- Notification strings -->
    <string name="notification_title_ES">Subida</string>
    <string name="notification_affirmative_ES">Cierto</string>
    <string name="notification_negative_ES">Falso</string>
    <string name="notification_affirmative_answer">Answer,True</string>
    <string name="notification_negative_answer">Answer,False</string>

    <!-- Info strings -->
    <string name="info_dialog_message">Por favor espere mientras la aplicación se cierra</string>
    <string name="info_getting_on_bus">You have probably gotten on a vehicle</string>
    <string name="info_getting_on_bus_ES">Parece que te subiste a un vehículo</string>

    <!-- Error/Warning strings -->
    <string name="warn_no_location_found">No valid location detected</string>
    <string name="warn_dialog_title">Warning</string>
    <string name="warn_dialog_title_ES">Advertencia</string>
    <string name="error_no_network_available">No networks available</string>
    <string name="error_not_connected_wifi">Not connected to any WiFi network</string>
    <string name="error_no_network_available_ES">No se han encontrado redes disponibles</string>
    <string name="error_not_connected_wifi_ES">No estás conectado a ninguna red WiFi</string>

    <!--GUI String values-->
    <string name="action_settings">Settings</string>
    <string name="app_title">Medidor de actividades</string>
    <string name="placeholder_activity">Ingrese su actividad actual</string>
    <string name="text_button_send">Enviar</string>
    <string name="text_button_save">Guardar</string>
    <string name="text_button_settings">Ajustes</string>
    <string name="text_button_exit">Terminar Servicio</string>
    <string name="text_activity_display">Actualmente te encuentras %1$s</string>
    <string name="text_activity_display_short">Act: %1$s</string>
    <string name="text_activity_accuracy_short">Acc: %1$s</string>
    <string name="text_activity_speed_short">Spd: %1$s m/s</string>
    <string name="radio_description_still">Detenido</string>
    <string name="radio_description_walking">Caminando</string>
    <string name="radio_description_getting_on_vehicle">Subiendo a vehículo</string>
    <string name="radio_description_on_vehicle">En vehículo</string>
    <string name="radio_description_getting_off_vehicle">Bajando de vehículo</string>
    <string name="radio_description_other">Otro</string>
    <string name="dialog_settings_accept">Aceptar</string>
    <string name="dialog_settings_deny">Cancelar</string>
    <string name="dialog_settings_title">Ajustes</string>

    <!-- Email sending parameters -->
    <!--<string name="email_address">Transappsantiagochile@gmail.com</string>
    <string name="email_password">isci2015transporte</string>-->
    <string name="email_sender_address">testing.transapp</string>
    <string name="email_recipient_address">testing.transapp@gmail.com</string>
    <string name="email_password">testingpass</string>
    <string name="email_subject">Log de Actividades</string>
    <string name="email_body">Mensaje enviado desde aplicación %1$s. Se incluye el log de actividades</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle" translatable="false">In a vehicle</string>
    <string name="on_bicycle" translatable="false">On a bicycle</string>
    <string name="on_foot" translatable="false">On foot</string>
    <string name="running" translatable="false">Running</string>
    <string name="still" translatable="false">Still</string>
    <string name="tilting" translatable="false">Tilting</string>
    <string name="unknown" translatable="false">Unknown activity</string>
    <string name="walking" translatable="false">Walking</string>
    <string name="unidentifiable_activity" translatable="false">Unidentifiable activity: %1$d</string>

    <!-- values (in spanish) used by the GUI TextView to indicate current detected activity -->
    <string name="in_vehicle_ES" translatable="false">en un vehículo</string>
    <string name="on_bicycle_ES" translatable="false">en bicicleta</string>
    <string name="on_foot_ES" translatable="false">a pie</string>
    <string name="running_ES" translatable="false">corriendo</string>
    <string name="still_ES" translatable="false">quieto</string>
    <string name="tilting_ES" translatable="false">en transición</string>
    <string name="unknown_ES" translatable="false">haciendo algo (?)</string>
    <string name="walking_ES" translatable="false">caminando</string>
    <string name="unidentifiable_activity_ES" translatable="false">Actividad no identificada: %1$d</string>
</resources>
