<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="api.activity.activityrecognition.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:contentDescription="@string/text_button_settings"
        android:src="@drawable/ic_settings"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/exitAppButton"
        android:layout_alignEnd="@+id/exitAppButton" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:orientation="vertical"
        android:id="@+id/activityRadioGroup"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/customActivityText"
        android:layout_alignStart="@+id/customActivityText"
        android:layout_alignRight="@+id/customActivityText"
        android:layout_alignEnd="@+id/customActivityText">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_still"
            android:id="@+id/stillRadioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_walking"
            android:id="@+id/walkingRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_getting_on_vehicle"
            android:id="@+id/gettingOnVehicleRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_on_vehicle"
            android:id="@+id/onVehicleRadioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_getting_off_vehicle"
            android:id="@+id/gettingOffVehicleRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_description_other"
            android:id="@+id/otherRadioButton"
            android:checked="false" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customActivityText"
        android:inputType="text"
        android:hint="@string/placeholder_activity"
        android:editable="false"
        android:layout_below="@+id/activityRadioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_display_short"
        android:id="@+id/currentActivityTextView"
        android:layout_alignBottom="@+id/currentAccuracyTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_accuracy_short"
        android:id="@+id/currentAccuracyTextView"
        android:layout_alignTop="@+id/currentSpeedTextView"
        android:layout_alignRight="@+id/saveButton"
        android:layout_alignEnd="@+id/saveButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_speed_short"
        android:id="@+id/currentSpeedTextView"
        android:layout_above="@+id/exitAppButton"
        android:layout_alignRight="@+id/exitAppButton"
        android:layout_alignEnd="@+id/exitAppButton"
        android:layout_marginBottom="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/customActivityText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_exit"
        android:id="@+id/exitAppButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_send"
        android:id="@+id/sendByEmailButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
